SF-626 Fix mobile view checking app area cut off (#381)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -23,7 +23,6 @@
   #text-panel {
     display: flex;
     flex-direction: column;
-    flex: 1;
     height: 100%;
     width: 100%;
     .chapter-select {
